# agencia_marketing

./: README.md  pyproject.toml
src/agencia_marketing/: crew.py  main.py
src/agencia_marketing/config/: agents.yaml  tasks.yaml
