[tool.poetry]
name = "agencia_marketing"
version = "0.1.0"
description = "agencia_marketing using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.32.2" }
langchain_google_genai = "1.0.3"
google-generativeai = "0.5.2"

[tool.poetry.scripts]
agencia_marketing = "agencia_marketing.main:run"
train = "agencia_marketing.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
